--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-sandbox",
   "version": "1.0.0",
   "description": "Simple Parcel Sandbox",
-  "main": "index.php",
+  "main": "index.html",
   "scripts": {
     "start": "parcel index.html --open",
-    "build": "parcel build index.php"
+    "build": "parcel build index.html"
   },
   "dependencies": {},
   "devDependencies": {
